WIP Fix teacher schedule on mobile screen
Remove the 1.1 scalefactor from height. (Why is that there?)
Remove extra <p> so that appointments are always 2 lines
Introduce scalefactor (does not work)
Remove lesuur on small screens (only teacher mode for now)

--- a/style.css
+++ b/style.css
@@ -252,6 +252,11 @@ strong.lesuur {
   right: 13px;
   translate: 0 -1px;
 }
+@media (max-width: 800px) {
+  body[data-user-type="teacher"] .weekEnabled .lesuur {
+    display: none;
+  }
+}
 h2 {
   font-size: 1.25rem;
   font-weight: 500;
